--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@ user-select: none; /* Standard syntax */">PRESS ME</button>
 
 
 
-<button class="2" style="height: 12%; width: 12%; margin-left:50%; margin-top: 25%;  " id="e" onclick="var num = 10">
+<button class="2" style="height: 12%; width: 12%; margin-left:50%; margin-top: 25%; -webkit-user-select: none; /* Safari */
+-ms-user-select: none; /* IE 10 and IE 11 */
+user-select: none; /* Standard syntax */  " id="e" onclick="var num = 10">
 
 
 0
@@ -58,7 +60,7 @@ user-select: none; /* Standard syntax */">PRESS ME</button>
 -ms-user-select: none; /* IE 10 and IE 11 */
 user-select: none; /* Standard syntax */ ">
 
-created by ALEX CURRY and jonny rose v 2.0
+created by ALEX CURRY and jonny rose v 2.1
 
 </p><p style="background-color: blue;  -webkit-user-select: none; /* Safari */
 -ms-user-select: none; /* IE 10 and IE 11 */
