--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@ created by ALEX CURRY and jonny rose v 2.1
 </p><p style="background-color: blue;  -webkit-user-select: none; /* Safari */
 -ms-user-select: none; /* IE 10 and IE 11 */
 user-select: none; /* Standard syntax */ ">
-high score=300 try to beat it :)
+high score=300 If you beat it make shure to play it
 
 </p>
