--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-<body style="background-color: pink;" onclick="num=-1; numplus()">
+<body style="background-color: pink;" onclick="numplus()">
 
 <style>
     button{background-color: yellow; border-color: yellow; }
@@ -32,7 +32,7 @@
 </p>
 
 
-<marquee scrollamount="40" onclick="num=-1; numplus()">
+<marquee scrollamount="40" onclick=" numplus()">
 <button onclick="numplus()" style="-webkit-user-select: none; /* Safari */
 -ms-user-select: none; /* IE 10 and IE 11 */
 user-select: none; /* Standard syntax */">PRESS ME</button>
