--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-<body style="background-color: pink;" onclick="numplus()">
+<body style="background-color: pink;" onclick="">
 
 <style>
     button{background-color: yellow; border-color: yellow; }
@@ -32,7 +32,7 @@
 </p>
 
 
-<marquee scrollamount="40" onclick=" numplus()">
+<marquee scrollamount="40" onclick="">
 <button onclick="numplus()" style="-webkit-user-select: none; /* Safari */
 -ms-user-select: none; /* IE 10 and IE 11 */
 user-select: none; /* Standard syntax */">PRESS ME</button>
@@ -60,11 +60,11 @@ user-select: none; /* Standard syntax */  " id="e" onclick="var num = 10">
 -ms-user-select: none; /* IE 10 and IE 11 */
 user-select: none; /* Standard syntax */ ">
 
-created by ALEX CURRY and jonny rose v3.0
+created by ALEX CURRY and jonny rose v2.1
 
 </p><p style="background-color: blue;  -webkit-user-select: none; /* Safari */
 -ms-user-select: none; /* IE 10 and IE 11 */
 user-select: none; /* Standard syntax */ ">
-high score=0 If you beat it make shure to tell us!
+high score=300 If you beat it make shure to tell us!
 
 </p>
