--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html><head>
+<html>
+<head>
 <title>DNA TEST RESULT</title>
 <script>
 function show()
@@ -7,17 +8,35 @@ document.getElementById("hc").style = "display:unset background-color:blue; heig
 document.getElementById("hb").style = "display:none;"
 }
 </script>
+<style>
+button
+{
+  background:linear-gradient(20deg,black,white) 
+  bordder 
+}
+.navbar 
+{
+width:100%;
+height:3%;
+background:rgb(255, 255, 255);
+margin-bottom:-10px;
 
+
+}
+
+
+</style>
 </head>
-<body style="background: linear-gradient(20deg,red,orange,yellow,green,blue,purple);">
-<div style="width:100%; background:#A8FFFF; height:50%;"><center><h1 style="font-weight: bolder;">DNA TEST RESULT</h1>
+<body style="background: linear-gradient(20deg,rgb(255, 255, 255),rgb(0, 0, 0),rgb(255, 255, 255),rgb(0, 0, 0),rgb(255, 255, 255),rgb(0, 0, 0));">
+<div class="navbar"><span onclick="alert('error you havent loged out')" style="font-size:30px;">HOME </span><span style="font-size:30px; background-color: rgb(255, 140, 0); padding:-1%; margin-left:100px;">TEST</span></div>
+    <div style="width:100%; background:#A8FFFF; height:50%;"><center><H1 style="font-weight: bolder;">DNA TEST RESULT</H1>
 <p>compairing with Zain ####</p>
 <button onclick="show()" id="hb">show results</button>
 <div style="display:none;" id="hc">
-    <h1>Zain 56% related</h1>
-    <h3>Unhappy with the results?</h3></div>
+    <h1>Zain 56% related (this answer might change)</h1>
+    <h3 onclick="confirm('are you Unhappy')">Unhappy with the results?</h3></div>
 </center></div>
 <center><span>(C)ftd.co</span></center>
 
-
-</body></html>
+</body>
+</html>
