--- a/index.html
+++ b/index.html
@@ -1,42 +1,54 @@
-<html>
-<head>
-<title>DNA TEST RESULT</title>
 <script>
-function show()
-{
-document.getElementById("hc").style = "display:unset background-color:blue; height:auto; width:auto; border-color:black; border-width:1px; border-style:solid;"
-document.getElementById("hb").style = "display:none;"
-}
+    var pulse = function () {
+	var e = document.createElement("div");
+	e.setAttribute('class','circle'),
+		document.body.appendChild(e),
+		e.style.top = event.pageY + 'px',
+		e.style.left = event.pageX + 'px';
+		
+};
+document.addEventListener('click', pulse );
 </script>
 <style>
-button
-{
-  background:linear-gradient(20deg,black,white) 
-  bordder 
+    body{
+	margin: 0;
+	padding: 0;
+	width: 100%;
 }
-.navbar 
-{
-width:100%;
-height:3%;
-background:rgb(255, 255, 255);
-margin-bottom:-10px;
-
-
+.circle{
+	position: absolute;	
+	-webkit-transform: translate(-50%,-50%);
+	-moz-transform: translate(-50%,-50%);
+	-ms-transform: translate(-50%,-50%);
+	-o-transform: translate(-50%,-50%);
+	transform: translate(-50%,-50%);
+	border-radius: 50%;
+	animation: dots 0.5s linear forwards;
+}
+.circle:nth-child(odd){
+	background-color: #006eff;
+}
+.circle:nth-child(even){
+	background-color: #006eff
 }
 
 
+@keyframes dots{
+	0%{
+		height: 0;
+		width: 0;
+		opacity: 1;
+	}
+	50%{
+		opacity: 1;
+	}
+	100%{
+		height: 25px;
+		width: 25px;
+		opacity: 1;
+	}
+}
 </style>
-</head>
-<body style="background: linear-gradient(20deg,rgb(255, 255, 255),rgb(0, 0, 0),rgb(255, 255, 255),rgb(0, 0, 0),rgb(255, 255, 255),rgb(0, 0, 0));">
-<div class="navbar"><span onclick="alert('error you havent loged out')" style="font-size:30px;">HOME </span><span style="font-size:30px; background-color: rgb(255, 140, 0); padding:-1%; margin-left:100px;">TEST</span></div>
-    <div style="width:100%; background:#A8FFFF; height:50%;"><center><H1 style="font-weight: bolder;">DNA TEST RESULT</H1>
-<p>compairing with Zain ####</p>
-<button onclick="show()" id="hb">show results</button>
-<div style="display:none;" id="hc">
-    <h1>Zain 56% related (this answer might change)</h1>
-    <h3 onclick="confirm('are you Unhappy')">Unhappy with the results?</h3></div>
-</center></div>
-<center><span>(C)ftd.co</span></center>
 
-</body>
-</html>
+<title>Graping</title>
+<img src="C:\Users\Student 01\Downloads\vecteezy_abstract-black-and-white-grid-pattern_2401608 (1)\Abstract_Black_and_White_Grid_Pattern_generated.jpg" style="height:100%; width:100%;">
