--- a/index.html
+++ b/index.html
@@ -51,4 +51,4 @@ document.addEventListener('click', pulse );
 </style>
 
 <title>Graping</title>
-<img src="C:\Users\Student 01\Downloads\vecteezy_abstract-black-and-white-grid-pattern_2401608 (1)\Abstract_Black_and_White_Grid_Pattern_generated.jpg" style="height:100%; width:100%;">
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Ffree-photos-vectors%2Fgrid-paper&psig=AOvVaw0lp7D9q-v631jE61KDVIvg&ust=1680880698302000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCKi61t3Glf4CFQAAAAAdAAAAABAD" style="height:100%; width:100%;">
