--- a/index.html
+++ b/index.html
@@ -51,4 +51,4 @@ document.addEventListener('click', pulse );
 </style>
 
 <title>Graping</title>
-<img src="grid" style="height:100%; width:100%;">
+<img src="Abstract_Black_and_White_Grid_Pattern_generated.jpg" style="height:100%; width:100%;">
