--- a/index.html
+++ b/index.html
@@ -50,5 +50,5 @@ document.addEventListener('click', pulse );
 }
 </style>
 
-<title>Graping</title>
+<title>Graphing</title>
 <img src="Abstract_Black_and_White_Grid_Pattern_generated.jpg" style="height:100%; width:100%;">
