--- a/index.html
+++ b/index.html
@@ -51,4 +51,4 @@ document.addEventListener('click', pulse );
 </style>
 
 <title>Graphing</title>
-<img src="edit.jpg" style="height:100%; width:100%;">
+<img src="graph.png" style="height:100%; width:100%;">
